Few Bug fixed - many more coming up

--- a/tw_sub/templates/auth.html
+++ b/tw_sub/templates/auth.html
@@ -71,7 +71,7 @@
                     url:'/auth_pin?pin='+pin,
                     success: function(data){
                             alert('SUCCESS - Redirecting to Dashboard');
-                            window.location = '/search';
+                            window.location = '/updates';
                         },
                     error: function(data) {
                             alert('ERROR - ' + JSON.stringify(data));
