Nav is consistent now and export gives a link to download

--- a/tw_sub/templates/auth.html
+++ b/tw_sub/templates/auth.html
@@ -9,13 +9,19 @@
     <nav class="navbar navbar-light bg-light" style="background-color: #bdf !important;">
         <a class="navbar-brand" href="#">Twitter Export</a>   
         <div class="nav-item active">
-        <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="/">Home<span class="sr-only">(current)</span> </a>
         </div>
         <div class="nav-item">
-        <a class="nav-link" href="/updates">Dashboard</a>
+        <a class="nav-link" href="/updates">Dashboard </a>
         </div>
         <div class="nav-item">
-        <a class="nav-link" href="/search">Followers</a>
+            <a class="nav-link" href="/search">Followers </a>
+        </div>
+        <div class="nav-item">
+            <a class="nav-link" href="/email">Emails</a>
+        </div>
+        <div class="nav-item">
+            <a class="nav-link" target="_blank" href="https://github.com/MohitKumar1991/twitter-export">Github</a>
         </div>
         <span class="navbar-text">
             A tool to DM your twitter followers
