--- a/tw_sub/templates/emails.html
+++ b/tw_sub/templates/emails.html
@@ -17,10 +17,13 @@
         <a class="nav-link" href="/updates">Dashboard </a>
         </div>
         <div class="nav-item">
-        <a class="nav-link" href="/search">Followers <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="/search">Followers </a>
         </div>
         <div class="nav-item">
-            <a class="nav-link" href="/emails">Emails <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="/email">Emails <span class="sr-only">(current)</span></a>
+        </div>
+        <div class="nav-item">
+            <a class="nav-link" target="_blank" href="https://github.com/MohitKumar1991/twitter-export">Github</a>
         </div>
         <span class="navbar-text">
             A tool to DM your twitter followers
