--- a/tw_sub/templates/updates.html
+++ b/tw_sub/templates/updates.html
@@ -14,10 +14,16 @@
         <a class="nav-link" href="/">Home </a>
         </div>
         <div class="nav-item">
-        <a class="nav-link" href="/updates">Dashboard <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="/updates">Dashboard </a>
         </div>
         <div class="nav-item">
-        <a class="nav-link" href="/search">Followers</a>
+            <a class="nav-link" href="/search">Followers <span class="sr-only">(current)</span></a>
+        </div>
+        <div class="nav-item">
+            <a class="nav-link" href="/email">Emails </a>
+        </div>
+        <div class="nav-item">
+            <a class="nav-link" target="_blank" href="https://github.com/MohitKumar1991/twitter-export">Github</a>
         </div>
         <span class="navbar-text">
             A tool to DM your twitter followers
