more minor bugs

--- a/tw_sub/templates/updates.html
+++ b/tw_sub/templates/updates.html
@@ -149,7 +149,7 @@
                         $('#indexstatus').text('Followers Index - ' + data.index_status);
                     },
                     error: function(err) {
-                        console.log(data);
+                        console.log(err);
                         alert(err);
                     }
                 })
